# RA_Linux

Scripts/: convertDepthAndSegmentation.sh  generateSyntheticRooms.sh  generateViews.sh  tranferGeneratedViews.sh
ToolBox/ConvertDepthAndSeg/: CMakeLists.txt
ToolBox/ConvertDepthAndSeg/D3D/src/: CMakeLists.txt
ToolBox/ConvertDepthAndSeg/D3D/src/d3d_base/: grid.h
ToolBox/ConvertDepthAndSeg/D3D/src/d3d_external/: CImg.h
ToolBox/ConvertDepthAndSeg/D3D/src/d3d_io/: volumetricFusionTools_New.cpp
ToolBox/ConvertDepthAndSeg/conversion/: CMakeLists.txt  readAndConvert16bitDM.cpp  readAndConvertSUNCGCategories.cpp
ToolBox/ConvertDepthAndSeg/conversion/MultiClassGrid/: multiClassFullTransitionGrid.cpp  multiClassFullTransitionGrid.h  multiClassGrid.cpp  multiClassGrid.h  multiClassHalfTransitionGrid.cpp  multiClassHalfTransitionGrid.h
ToolBox/ReadSemanticGroundTruth/: class_index.csv  computeFrequentObjects.m  constructGrid.m  convertGrid.mexa64  countObjects.m  depth_node_category.m  execution_parameters.mat  generateCeilingFloor.m  generateObjects.m  generateViews.m  generateWalls.m  isRoomVolumeInsufficient.m  labels.txt  loadObject.m  mapObjects.mat  max100keys.mat  min100keys.mat  multiQueryKNNSearchImplGPU.m  readAndConvertSUNCG.m  roomIncluded.m  translateCategories.m
ToolBox/ReadSemanticGroundTruth/ToolBox/: getSceneVoxSUNCG.m  perpareNYUCADdata.m
ToolBox/ReadSemanticGroundTruth/ToolBox/MyMexFiles/: CImg.h  convertGrid.cpp  grid.h  ioTools.cpp  ioTools.h  multiClassGrid.h  volumetricFusionTools.cpp  volumetricFusionTools.h
ToolBox/ReadSemanticGroundTruth/ToolBox/utils/: read_wobj.m
ToolBox/SUNCGtoolbox-spyridon/gaps/apps/scn2cam/: scn2cam.cpp
ToolBox/SUNCGtoolbox-spyridon/gaps/apps/scn2img/: scn2img.cpp
ToolBox/SUNCGtoolbox-spyridon/metadata/: .~lock.ModelCategoryMapping.csv#  mod2.csv  models.csv
mz/: dataraw_0camera.sh  datatest_0camera.sh  result.txt  result2.txt
